# holos

./: Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
