[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Malov <ndrml@ya.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argument parsing
clap = { version = "4.4.7", features = ["derive"] }
# async networking
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
futures = "0.3.29"
# encode and decode in opus
# opus = { git = "https://github.com/SpaceManiac/opus-rs.git" }
# error handling
anyhow = "1.0.75"
# logging
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
